--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="app">
-    <!-- LOGIN -->
+
+    <!-- ================= LOGIN ================= -->
     <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
@@ -18,7 +19,7 @@
       </div>
     </div>
 
-    <!-- MAIN -->
+    <!-- ================= MAIN APP ================= -->
     <div id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">Dashboard</a>
@@ -31,8 +32,9 @@
 
       <div class="container">
 
-        <!-- DASHBOARD -->
+        <!-- ============ DASHBOARD / HOME ============ -->
         <section id="home">
+          <!-- KPIs -->
           <div class="section">
             <h2>Overview</h2>
             <div class="kpis">
@@ -44,39 +46,49 @@
             </div>
           </div>
 
+          <!-- Total Stock & Ad Spend by Country -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table class="table">
-              <thead><tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend</th></tr></thead>
+            <table class="table" id="stockByCountryTable">
+              <thead>
+                <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+              </thead>
               <tbody id="stockByCountryBody"></tbody>
-              <tfoot><tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0</th></tr></tfoot>
-            </table>
-          </div>
-
-          <div class="section">
-            <h2>Weekly Delivered (Mon → Sun)</h2>
-            <div class="card">
-              <div class="row wrap">
-                <button id="weeklyPrev" class="btn outline">◀ Prev</button>
-                <div id="weeklyRange" class="badge">Week:</div>
-                <button id="weeklyNext" class="btn outline">Next ▶</button>
-                <button id="weeklySave" class="btn">Save</button>
-                <button id="weeklyReset" class="btn danger outline">Reset</button>
-              </div>
-            </div>
-            <table id="weeklyTable" class="table compact">
-              <thead id="weeklyHead"></thead>
-              <tbody id="weeklyBody"></tbody>
               <tfoot>
-                <tr class="totals"><th>Totals</th>
-                  <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
-                  <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
-                  <th id="wAllT">0</th>
-                </tr>
+                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
               </tfoot>
             </table>
           </div>
 
+          <!-- Weekly Delivered: editable grid -->
+          <div class="section">
+            <h2>Weekly Delivered (Mon → Sun)</h2>
+            <div class="card">
+              <div class="row wrap">
+                <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
+                <div class="badge" id="weeklyRange">Week: </div>
+                <button id="weeklyNext" class="btn outline">Next week ▶</button>
+                <button id="weeklySave" class="btn">Save</button>
+                <button id="weeklyReset" class="btn danger outline">Reset</button>
+              </div>
+              <small>Tip: the grid shows <b>all countries</b> in the system. Click a cell to edit delivered pieces for that day/country.</small>
+            </div>
+            <div class="table-scroll">
+              <table id="weeklyTable" class="table compact">
+                <thead id="weeklyHead"></thead>
+                <tbody id="weeklyBody"></tbody>
+                <tfoot>
+                  <tr class="totals"><th>Totals</th>
+                    <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
+                    <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
+                    <th id="wAllT">0</th>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+          </div>
+
+          <!-- Daily Advertising Spend (no date; replace if exists) -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
             <div class="card">
@@ -89,11 +101,13 @@
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adSave" class="btn">Save / Replace</button>
+                <button id="adSave" class="btn">Save/Replace</button>
               </div>
+              <small>Saving again for the same <b>product + platform + country</b> will replace the previous value for today.</small>
             </div>
           </div>
 
+          <!-- Stock Movement (Create Shipment) -->
           <div class="section">
             <h2>Stock Movement</h2>
             <div class="card">
@@ -106,26 +120,33 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>Mark as Arrived to update stock destination (+) and origin (−).</small>
+              <small>When marked as arrived, the system will <b>add to destination</b> and <b>deduct from origin</b>.</small>
             </div>
           </div>
 
+          <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table">
-              <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
+            <table class="table" id="shipCK">
+              <thead><tr>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+              </tr></thead>
               <tbody id="shipCKBody"></tbody>
             </table>
           </div>
 
+          <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table">
-              <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
+            <table class="table" id="shipIC">
+              <thead><tr>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+              </tr></thead>
               <tbody id="shipICBody"></tbody>
             </table>
           </div>
 
+          <!-- Profit by Country -->
           <div class="section">
             <h2>Profit by Country</h2>
             <div class="row wrap">
@@ -134,12 +155,35 @@
               <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
-            <table class="table">
-              <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+            <table class="table" id="profitCountry">
+              <thead><tr>
+                <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
               <tbody id="profitCountryBody"></tbody>
-              <tfoot><tr class="totals"><th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th></tr></tfoot>
+              <tfoot>
+                <tr class="totals">
+                  <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
+                </tr>
+              </tfoot>
             </table>
           </div>
+
+          <!-- To-Do + Weekly To-Do -->
+          <div class="section">
+            <h2>To-Do</h2>
+            <div class="row">
+              <input id="todoText" class="input" placeholder="Task"/>
+              <button id="todoAdd" class="btn">Add</button>
+            </div>
+            <div id="todoList" class="todo-list"></div>
+          </div>
+
+          <div class="section">
+            <h2>Weekly To-Do</h2>
+            <div id="weeklyWrap" class="weeks"></div>
+          </div>
+
+          <!-- Lifetime Product Performance (global) -->
           <div class="section">
             <h2>Lifetime Product Performance</h2>
             <div class="row wrap">
@@ -148,47 +192,49 @@
               <input id="lpEnd" type="date" class="input"/>
               <button id="lpRun" class="btn">Run</button>
             </div>
-            <table class="table">
-              <thead><tr><th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+            <table class="table" id="lifetimeTable">
+              <thead><tr>
+                <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
               <tbody id="lifetimeBody"></tbody>
-              <tfoot><tr class="totals"><th colspan="2">Totals</th><th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th></tr></tfoot>
+              <tfoot>
+                <tr class="totals"><th colspan="2">Totals</th>
+                  <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
+                </tr>
+              </tfoot>
             </table>
-          </div>
-          <div class="section">
-            <h2>To-Do</h2>
-            <div class="row"><input id="todoText" class="input" placeholder="Task"/><button id="todoAdd" class="btn">Add</button></div>
-            <div id="todoList" class="todo-list"></div>
-          </div>
-
-          <div class="section">
-            <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks"></div>
           </div>
         </section>
 
-        <!-- PRODUCTS -->
+        <!-- ============ PRODUCTS ============ -->
         <section id="products" style="display:none">
           <h2>Products</h2>
+
           <div class="card">
             <div class="h">Add Product</div>
             <div class="row wrap">
               <input id="pName" class="input" placeholder="Name"/>
               <input id="pSku" class="input" placeholder="SKU"/>
-              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
-              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" step="0.01"/>
-              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" step="0.01"/>
+              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" min="0" step="0.01"/>
+              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" min="0" step="0.01"/>
+              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01"/>
               <button id="pAdd" class="btn">Add</button>
             </div>
           </div>
+
           <table id="productsTable" class="table">
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody></tbody>
           </table>
+
+          <small>Click <b>Open</b> to go to that product’s page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
-        <!-- PERFORMANCE -->
+        <!-- ============ PERFORMANCE ============ -->
         <section id="performance" style="display:none">
           <h2>Performance</h2>
+
+          <!-- Top Delivered Products -->
           <div class="card">
             <div class="h">Top Delivered Products</div>
             <div class="row wrap">
@@ -203,11 +249,14 @@
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
-              <thead><tr><th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th></tr></thead>
+              <thead><tr>
+                <th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
+              </tr></thead>
               <tbody></tbody>
             </table>
           </div>
 
+          <!-- Remittance Report -->
           <div class="card">
             <div class="h">Remittance Report</div>
             <div class="row wrap">
@@ -222,12 +271,14 @@
               <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
+            <div id="rMsg" class="muted"></div>
           </div>
         </section>
 
-        <!-- FINANCE -->
+        <!-- ============ FINANCE ============ -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
+
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
             <div id="runBalance" class="balance">0.00 USD</div>
@@ -236,13 +287,22 @@
           <div class="card">
             <div class="h">Categories</div>
             <div class="row wrap">
-              <select id="fcType" class="input"><option value="debit">Debit</option><option value="credit">Credit</option></select>
+              <select id="fcType" class="input">
+                <option value="debit">Debit</option>
+                <option value="credit">Credit</option>
+              </select>
               <input id="fcName" class="input" placeholder="Category name"/>
               <button id="fcAdd" class="btn">Add Category</button>
             </div>
             <div class="row cats">
-              <div><h4>Debits</h4><div id="fcDebits" class="chips deletable"></div></div>
-              <div><h4>Credits</h4><div id="fcCredits" class="chips deletable"></div></div>
+              <div>
+                <h4>Debits</h4>
+                <div id="fcDebits" class="chips"></div>
+              </div>
+              <div>
+                <h4>Credits</h4>
+                <div id="fcCredits" class="chips"></div>
+              </div>
             </div>
           </div>
 
@@ -270,13 +330,16 @@
           </div>
         </section>
 
-        <!-- SETTINGS -->
+        <!-- ============ SETTINGS ============ -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
 
           <div class="card">
             <div class="h">Countries</div>
-            <div class="row"><input id="cty" class="input" placeholder="Add country"/><button id="ctyAdd" class="btn">Add</button></div>
+            <div class="row">
+              <input id="cty" class="input" placeholder="Add country"/>
+              <button id="ctyAdd" class="btn">Add</button>
+            </div>
             <div id="ctyList" class="chips deletable"></div>
           </div>
 
@@ -295,7 +358,10 @@
 
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
-            <div class="row"><input id="snapName" class="input" placeholder="Name this snapshot"/><button id="snapSave" class="btn">Save current system data</button></div>
+            <div class="row">
+              <input id="snapName" class="input" placeholder="Name this snapshot"/>
+              <button id="snapSave" class="btn">Save current system data</button>
+            </div>
             <table class="table">
               <thead><tr><th>Name</th><th>File</th><th>Actions</th></tr></thead>
               <tbody id="snapList"></tbody>
@@ -303,9 +369,9 @@
           </div>
         </section>
 
-      </div>
-    </div>
-  </div>
+      </div><!-- /container -->
+    </div><!-- /main -->
+  </div><!-- /app -->
 
   <script src="/public/app.js"></script>
 </body>
