--- a/product.html
+++ b/product.html
@@ -3,34 +3,36 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EAS Tracker – Product</title>
+  <title>Product • EAS Tracker</title>
   <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
   <nav class="nav">
     <a href="/">← Back</a>
+    <span class="nav-right brand">Product</span>
   </nav>
 
-  <div class="container" id="product">
+  <div class="container">
     <h1 id="pdTitle">Product</h1>
-    <div id="pdSku" class="muted"></div>
+    <div class="muted" id="pdSku"></div>
 
-    <!-- Stock & Ad Spend by Country (this product) -->
-    <div class="section">
-      <h2>Stock &amp; Ad Spend by Country</h2>
+    <!-- Stock & Ad Spend by Country (EXCLUDES CHINA) -->
+    <div class="card">
+      <div class="h">Stock &amp; Ad Spend by Country</div>
       <table class="table">
-        <thead><tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend</th></tr></thead>
+        <thead><tr><th>Country</th><th>Stock</th><th>Ad Spend</th></tr></thead>
         <tbody id="pdStockBody"></tbody>
         <tfoot><tr class="totals"><th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr></tfoot>
       </table>
+      <div class="badge" id="pdTransitBadge">Transit total: 0</div>
     </div>
 
-    <!-- Profit + Advertising Budget (per country) -->
-    <div class="section">
-      <h2>Profit + Advertising Budget (per country)</h2>
+    <!-- Profit + Advertising Budget (manual, per country, EXCLUDING CHINA) -->
+    <div class="card">
+      <div class="h">Profit + Advertising Budget (per country)</div>
       <div class="row wrap">
         <select id="pdPBCountry" class="input"></select>
-        <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" step="0.01"/>
+        <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" min="0" step="0.01"/>
         <button id="pdPBSave" class="btn">Save</button>
       </div>
       <table class="table">
@@ -39,130 +41,111 @@
       </table>
     </div>
 
-    <!-- Daily Ad Spend (Replace current) -->
-    <div class="section">
-      <h2>Daily Ad Spend (Replace current)</h2>
+    <!-- Daily Ad Spend (replace current) -->
+    <div class="card">
+      <div class="h">Daily Ad Spend (Replace current)</div>
       <div class="row wrap">
-        <select id="pdProductForSpend" class="input"></select>
+        <select id="pdAdCountry" class="input"></select>
         <select id="pdAdPlatform" class="input">
           <option value="facebook">Facebook</option>
           <option value="tiktok">TikTok</option>
           <option value="google">Google</option>
         </select>
-        <select id="pdAdCountry" class="input"></select>
-        <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" step="0.01"/>
-        <button id="pdAdSave" class="btn">Save/Replace</button>
+        <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+        <button id="pdAdSave" class="btn">Save</button>
       </div>
+      <table class="table">
+        <thead><tr><th>Country</th><th>Platform</th><th>Amount</th></tr></thead>
+        <tbody id="pdAdBody"></tbody>
+      </table>
     </div>
 
-    <!-- Shipments (this product) -->
-    <div class="section">
-      <h2>Shipments (Create)</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdMvFrom" class="input"></select>
-          <span>→</span>
-          <select id="pdMvTo" class="input"></select>
-          <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
-          <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-          <button id="pdMvAdd" class="btn">Add Shipment</button>
-        </div>
+    <!-- Stock Movement (include China) -->
+    <div class="card">
+      <div class="h">Stock Movement</div>
+      <div class="row wrap">
+        <select id="pdMvFrom" class="input"></select><span>→</span>
+        <select id="pdMvTo" class="input"></select>
+        <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
+        <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+        <button id="pdMvAdd" class="btn">Add Movement</button>
       </div>
     </div>
 
     <!-- Transit (China → Kenya) -->
-    <div class="section">
-      <h2>Transit (China → Kenya)</h2>
+    <div class="card">
+      <div class="h">Transit (China → Kenya)</div>
       <table class="table">
-        <thead><tr>
-          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-        </tr></thead>
+        <thead><tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
         <tbody id="pdShipCKBody"></tbody>
       </table>
     </div>
 
     <!-- Transit (Inter-country) -->
-    <div class="section">
-      <h2>Transit (Inter-country)</h2>
+    <div class="card">
+      <div class="h">Transit (Inter-country)</div>
       <table class="table">
-        <thead><tr>
-          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-        </tr></thead>
+        <thead><tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
         <tbody id="pdShipICBody"></tbody>
       </table>
     </div>
 
-    <!-- NEW: Arrived Shipments (this product) -->
-    <div class="section">
-      <h2>Arrived Shipments</h2>
+    <!-- NEW: Arrived Shipments (for this product) -->
+    <div class="card">
+      <div class="h">Arrived Shipments</div>
       <table class="table">
-        <thead><tr>
-          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th>
-        </tr></thead>
-        <tbody id="pdShipArrBody"></tbody>
+        <thead><tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
+        <tbody id="pdShipArrivedBody"></tbody>
       </table>
     </div>
 
     <!-- Lifetime (This Product) -->
-    <div class="section">
-      <h2>Lifetime (This Product)</h2>
+    <div class="card">
+      <div class="h">Lifetime (This Product)</div>
       <div class="row wrap">
         <input id="pdLPStart" type="date" class="input"/>
         <input id="pdLPEnd" type="date" class="input"/>
         <button id="pdLPRun" class="btn">Run</button>
       </div>
       <table class="table">
-        <thead><tr>
-          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-        </tr></thead>
+        <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
         <tbody id="pdLPBody"></tbody>
         <tfoot>
           <tr class="totals"><th>Totals</th>
-            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
-            <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
+            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th><th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
           </tr>
         </tfoot>
       </table>
     </div>
 
-    <!-- Influencers -->
-    <div class="section">
-      <h2>Influencer Spend</h2>
-      <div class="card">
-        <div class="h">Add Influencer</div>
-        <div class="row wrap">
-          <input id="pdInfName" class="input" placeholder="Name"/>
-          <input id="pdInfSocial" class="input" placeholder="Handle / link"/>
-          <select id="pdInfCountry" class="input"></select>
-          <button id="pdInfAdd" class="btn">Add</button>
-        </div>
+    <!-- Influencer Spend -->
+    <div class="card">
+      <div class="h">Influencer Spend</div>
+      <div class="row wrap">
+        <input id="pdInfName" class="input" placeholder="Influencer Name"/>
+        <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
+        <select id="pdInfCountry" class="input"></select>
+        <button id="pdInfAdd" class="btn">Add Influencer</button>
       </div>
-
-      <div class="card">
-        <div class="h">Add Spend</div>
-        <div class="row wrap">
-          <input id="pdInfDate" type="date" class="input"/>
-          <select id="pdInfSelect" class="input"></select>
-          <select id="pdInfCountry" class="input"></select>
-          <input id="pdInfAmount" type="number" class="input" placeholder="Amount (USD)" step="0.01"/>
-          <button id="pdInfSpendAdd" class="btn">Add Spend</button>
-        </div>
+      <div class="row wrap">
+        <input id="pdInfDate" type="date" class="input"/>
+        <select id="pdInfSelect" class="input"></select>
+        <select id="pdInfCountry" class="input" style="display:none"></select>
+        <input id="pdInfAmount" type="number" class="input" placeholder="Spend (USD)" min="0" step="0.01"/>
+        <button id="pdInfSpendAdd" class="btn">Add Spend</button>
       </div>
-
       <div class="row wrap">
         <input id="pdInfStart" type="date" class="input"/>
         <input id="pdInfEnd" type="date" class="input"/>
-        <select id="pdInfFilterCountry" class="input"></select>
-        <button id="pdInfRun" class="btn">Run</button>
-        <div class="badge">Total: <span id="pdInfTotal">0</span> USD</div>
+        <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
+        <button id="pdInfRun" class="btn outline">Filter</button>
       </div>
-
       <table class="table">
         <thead><tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount</th><th></th></tr></thead>
         <tbody id="pdInfBody"></tbody>
+        <tfoot><tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr></tfoot>
       </table>
     </div>
-
   </div>
 
   <script src="/public/app.js"></script>
